--- a/.eslintrc
+++ b/.eslintrc
@@ -6,26 +6,23 @@
   "extends": [
     "airbnb-typescript/base",
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json"
   },
   "plugins": [
-
     "@typescript-eslint"
   ],
   "rules": {
-
     "no-plusplus": "off",
     "no-console": "warn",
     "max-len": ["warn", { "code": 120 }],
     "indent": ["warn", 2, {
       "SwitchCase": 1
     }],
-
-
     "@typescript-eslint/indent": ["warn", 2, {
       "SwitchCase": 1
     }],
@@ -35,6 +32,4 @@
     }]
   },
   "ignorePatterns": ["*config.js"]
-
 }
-
